Fixed some layout issue

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,7 @@
 .app {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   min-width: 240px;
   max-width: 640px;
   margin: 0 auto;
@@ -6,9 +9,9 @@
 }
 
 .app-header {
-  position: fixed;
-  top: 0;
-  left: 0;
+  /*position: fixed;*/
+  /*top: 0;*/
+  /*left: 0;*/
   display: inline-flex;
   justify-content: space-around;
   width: 100%;
