--- a/src/game/Game.module.css
+++ b/src/game/Game.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 20px;
     width: 100%;
     height: 100%;
