--- a/src/game/keyboard/Keyboard.module.css
+++ b/src/game/keyboard/Keyboard.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    margin: 0 auto;
     width: 100%;
+    margin: 0 auto 10px;
 }
 
 .row {
